--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "todomvc",
   "version": "0.0.1",
-  "main": "./index.js"
+  "main": "./index.js",
+  "dependencies": {
+    "tower-model": "*",
+    "tower-view": "*",
+    "tower-router": "*"
+  }
 }
