--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "tower-model": "*",
     "tower-view": "*",
-    "tower-router": "*"
+    "tower-router": "*",
+    "tower-app": "*"
   }
 }
