--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "dependencies": {
     "tower-router": "*",
     "tower-route": "*",
-    "tower-resource": "*",
-    "tower-emitter": "*",
-    "tower-stream": "*",
-    "tower-query": "*",
-    "tower-topology": "*",
-    "tower-adapter": "*",
-    "tower-view": "*",
-    "tower-memory-adapter": "*"
+    "tower/resource": "*",
+    "tower/template": "*",
+    "tower/content": "*",
+    "tower/directive": "*",
+    "tower/memory-adapter": "*"
   }
 }
